fix issues with z-index, fade-left animation and add some styles

--- a/src/styles/blocks/compare.scss
+++ b/src/styles/blocks/compare.scss
@@ -33,6 +33,8 @@
 
     overflow: hidden;
 
+    @include hoverTransition(transform, scale(1.2));
+
     &::after {
       content: "";
       display: block;
@@ -42,7 +44,6 @@
 
   &__img {
     position: absolute;
-    z-index: -1;
 
     @extend %img;
 
