--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -95,6 +95,10 @@
 
   object-fit: cover;
   object-position: center;
+
+  @include hoverTransition(transform, scale(0.98));
+  @include hoverTransition(border, 3px solid $color--primary-light);
+  @include hoverTransition(border-radius, 3px);
 }
 
 %form-input {
@@ -109,6 +113,7 @@
 
   &::placeholder {
     color: $color--input-placeholder;
+    font-family: Poppins, sans-serif;
   }
 
   &:hover {
